# frugalos

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Gemfile  Makefile  README.md  Vagrantfile.example  build.rs  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
apidoc/: data_structures.md  error_response.md  terminology.md
apidoc/v1/: buckets.md  devices.md  servers.md
docker/frugalos/: .gitignore  Dockerfile  bootstrap.sh  frugalos.yml  join.sh
docker/frugalos-build/: Dockerfile
docker/frugalos-release/: Dockerfile
docker/hub/: Dockerfile  README.md  publish.sh
docs/v1/: buckets.html  devices.html  servers.html
frugalos_config/: Cargo.toml  README.md
frugalos_config/schema/: config.proto  state.proto
frugalos_config/src/: builder.rs  cancelable_future.rs  cluster.rs  config.rs  device_tree.rs  error.rs  lib.rs  machine.rs  protobuf.rs  rpc.rs  service.rs  test_util.rs
frugalos_core/: Cargo.toml  README.md
frugalos_core/src/: lib.rs  lump.rs  serde_ext.rs  tracer.rs
frugalos_mds/: Cargo.toml  LICENSE  README.md
frugalos_mds/schema/: mds.proto
frugalos_mds/src/: codec.rs  config.rs  error.rs  lib.rs  machine.rs  protobuf.rs  server.rs  service.rs
frugalos_mds/src/node/: handle.rs  metrics.rs  mod.rs  node.rs  snapshot.rs  timeout.rs
frugalos_raft/: Cargo.toml  README.md
frugalos_raft/schema/: raft.proto
frugalos_raft/src/: lib.rs  node.rs  protobuf.rs  raft_io.rs  test_util.rs  timer.rs  util.rs
frugalos_raft/src/rpc/: client.rs  mail.rs  mod.rs  server.rs  service.rs
frugalos_raft/src/storage/: ballot.rs  log.rs  log_suffix.rs  mod.rs
frugalos_raft/src/storage/log_prefix/: delete.rs  load.rs  mod.rs  save.rs
frugalos_segment/: Cargo.toml  README.md
frugalos_segment/src/: config.rs  delete.rs  error.rs  full_sync.rs  lib.rs  metrics.rs  object.rs  repair.rs  rpc_server.rs  segment_gc.rs  segment_gc_manager.rs  service.rs  synchronizer.rs  test_util.rs  util.rs
frugalos_segment/src/client/: dispersed_storage.rs  ec.rs  mds.rs  mod.rs  replicated_storage.rs  storage.rs
frugalos_segment/src/queue_executor/: general_queue_executor.rs  mod.rs  repair_queue_executor.rs
grafana/: frugalos-dashboard.json
it/: README.md  frugalos.env
it/clusters/: nine-nodes.yml  single-node.yml  ten-nodes.yml  three-nodes.yml
it/scripts/: gen_delete_by_prefix_requests.sh  gen_live_requests.sh  gen_put_requests.sh  gen_video_requests.sh  http_requests.sh  put_buckets.sh  put_devices.sh
it/testsuites/: all.sh  basic.sh  common.sh  consistency.sh  count_fragments.sh  delete_fragment.sh  delete_prefix.sh  device.sh  down.sh  raftlog_recovery.sh  repair.sh  start_frugalos.sh
schema/: system.proto
scripts/: build_frugalos_image.sh  frugalos.yml  install_rpms_centos7.sh  install_rust_centos7.sh  join_debug_servers.sh  resume_cluster.sh  sends_set_repair_idleness_threshold_to_local_cluster.sh  setup_debug_cluster.sh  test-cluster-reproduce-bug.sh
src/: bucket.rs  build_information.rs  client.rs  codec.rs  config_server.rs  daemon.rs  device.rs  error.rs  http.rs  lib.rs  main.rs  many_objects.rs  object.rs  parameter_server.rs  recovery.rs  rpc_server.rs  server.rs  service.rs
src/command/: bucket.rs  delete_bucket_contents.rs  mod.rs  rpc_addr.rs  set_repair_config.rs  truncate_bucket.rs
visualize_scripts/frugalos_on_mac/: README.md  docker-compose.yml  example.sh  prometheus.yml
