[package]
name = "frugalos"
version = "0.13.0"
authors = ["The FrugalOS Developers"]
description = "Frugal Object Storage"
homepage = "https://github.com/frugalos/frugalos"
repository = "https://github.com/frugalos/frugalos"
readme = "README.md"
keywords = ["object-storage", "distributed"]
categories = ["database-implementations"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/frugalos"}

[dependencies]
atomic_immut = "0.1"
bytecodec = { version = "0.4", features = ["json_codec"] }
cannyls = "0.9"
cannyls_rpc = "0.1"
clap = "2"
fibers = "0.1"
fibers_http_server = "0.1"
fibers_rpc = "0.2"
fibers_tasque = "0.1"
frugalos_core = { version = "0.1", path = "frugalos_core" }
frugalos_config = { version = "0.5", path = "frugalos_config" }
frugalos_mds = { version = "0.8", path = "frugalos_mds" }
frugalos_raft = { version = "0.8", path = "frugalos_raft" }
frugalos_segment = { version = "0.8", path = "frugalos_segment" }
futures = "0.1"
jemallocator = "0.1.8"
jemalloc-ctl = "0.2"
hostname = "0.1"
httpcodec = "0.2"
libfrugalos = { git = "https://github.com/frugalos/libfrugalos", branch = "feature/koba/add-set-segment-settings-rpc" }
num_cpus = "1"
prometrics = "0.1"
raftlog = "0.5"
rustracing = "0.1"
rustracing_jaeger = "0.1"
siphasher = "0.2"
slog = "2"
sloggers = "0.3"
serde = "1"
serde_derive = "1"
serde_ignored = "0.0.4"
serde_yaml = "0.8"
trackable = "^0.2.21"
url = "1"

[dev-dependencies]
# TODO tempfile を使いたいが現状はコンパイルできないので諸々直す
tempdir = "0.3"

[build-dependencies]
trackable = "^0.2.21"

[workspace]
members = ["frugalos_core", "frugalos_config", "frugalos_mds", "frugalos_raft", "frugalos_segment"]
