[package]
edition = "2018"
name = "frugalos_config"
version = "1.2.0"
authors = ["The FrugalOS Developers"]
description = "Configuration Management Layer of Frugalos"
homepage = "https://github.com/frugalos/frugalos"
repository = "https://github.com/frugalos/frugalos"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/frugalos"}

[dependencies]
bytecodec = "0.4"
byteorder = "1"
cannyls = "0.10"
fibers = "0.1"
fibers_rpc = "0.3.4"
fibers_tasque = "0.1"
frugalos_raft = { version = "1.1", path = "../frugalos_raft/" }
futures = "0.1"
libfrugalos = "0.7"
prometrics = "0.1"
protobuf_codec = "0.2"
raftlog = "0.6"
rendezvous_hash = "0.3"
serde = "1"
serde_derive = "1"
slog = "2"
trackable = "1"
