[package]
name = "frugalos_core"
version = "0.1.0"
authors = ["The FrugalOS Developers"]
description = "Shared utilities for FrugalOS"
homepage = "https://github.com/frugalos/frugalos"
repository = "https://github.com/frugalos/frugalos"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/frugalos"}

[dependencies]
rustracing = "0.1"
rustracing_jaeger = "0.1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
trackable = "^0.2.21"
