[package]
name = "frugalos_mds"
version = "0.6.2"
authors = ["The FrugalOS Developers"]
description = "Metadata Store for Frugalos"
homepage = "https://github.com/frugalos/frugalos"
repository = "https://github.com/frugalos/frugalos"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/frugalos"}

[dependencies]
atomic_immut = "0.1"
bytecodec = "0.4"
byteorder = "1"
cannyls = "0.9"
fibers = "0.1"
fibers_rpc = "0.2"
fibers_tasque = "0.1"
frugalos_core = { version = "0.1", path = "../frugalos_core" }
frugalos_raft = { version = "0.6", path = "../frugalos_raft/" }
futures = "0.1"
libfrugalos = "0.2"
patricia_tree = { version = "0.1.8", features = ["binary-format"] }
prometrics = "0.1"
protobuf_codec = "0.2"
raftlog = "0.4"
rand = "0.5"
rustracing = "0.1"
rustracing_jaeger = "0.1"
serde = "1"
serde_derive = "1"
slog = "2"
trackable = "0.2"

[dev-dependencies]
fibers_global = "0.1"
