[package]
name = "frugalos_raft"
version = "0.6.1"
authors = ["The FrugalOS Developers"]
description = "An implementation of the `raftlog::Io` trait for `frugalos`"
homepage = "https://github.com/frugalos/frugalos"
repository = "https://github.com/frugalos/frugalos"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/frugalos"}

[dependencies]
adler32 = "1"
atomic_immut = "0.1"
bytecodec = "0.4"
byteorder = { version = "1", features = ["i128"] }
cannyls = "0.9"
fibers = "0.1"
fibers_rpc = "0.2"
futures = "0.1"
prometrics = "0.1"
protobuf_codec= "0.2"
raftlog = "0.5"
raftlog_protobuf = "0.2"
rand = "0.5"
serde = "1"
serde_derive = "1"
slog = "2"
trackable = "0.2"

[dev-dependencies]
fibers_global = "0.1"
