[package]
name = "frugalos_segment"
version = "0.6.1"
authors = ["The FrugalOS Developers"]
description = "A segment in a bucket in a Frugalos cluster"
homepage = "https://github.com/frugalos/frugalos"
repository = "https://github.com/frugalos/frugalos"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/frugalos"}

[dependencies]
adler32 = "1"
byteorder = { version = "1", features = ["i128"] }
cannyls = "0.9"
cannyls_rpc = "0.1"
ecpool = "1"
fibers = "0.1"
fibers_rpc = "0.2"
frugalos_core = { version = "0.1", path = "../frugalos_core/" }
frugalos_mds = { version = "0.6", path = "../frugalos_mds/" }
frugalos_raft = { version = "0.6", path = "../frugalos_raft/" }
futures = "0.1"
libfrugalos = "0.2"
prometrics = "0.1"
rand = "0.5"
raftlog = "0.5"
rustracing = "0.1"
rustracing_jaeger = "0.1"
serde = "1"
serde_derive = "1"
siphasher = "0.2"
slog = "2"
trackable = "0.2"

[dev-dependencies]
fibers_global = "0.1"
