[package]
edition = "2018"
name = "frugalos_segment"
version = "1.2.0"
authors = ["The FrugalOS Developers"]
description = "A segment in a bucket in a Frugalos cluster"
homepage = "https://github.com/frugalos/frugalos"
repository = "https://github.com/frugalos/frugalos"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/frugalos"}

[dependencies]
adler32 = "1"
byteorder = { version = "1", features = ["i128"] }
cannyls = "0.10"
cannyls_rpc = "0.3"
ecpool = "1"
fibers = "0.1"
fibers_rpc = "0.3.4"
fibers_tasque = "0.1"
frugalos_core = { version = "1.0", path = "../frugalos_core/" }
frugalos_mds = { version = "1.1", path = "../frugalos_mds/" }
frugalos_raft = { version = "1.1", path = "../frugalos_raft/" }
futures = "0.1"
libfrugalos = "0.7"
prometrics = "0.1"
rand = "0.5"
raftlog = "0.6"
rustracing = "0.1"
rustracing_jaeger = "0.1"
serde = "1"
serde_derive = "1"
siphasher = "0.2"
slog = "2"
trackable = "1"

[dev-dependencies]
fibers_global = "0.1"
